# rtype

./: CMakeLists.txt  conanfile.py  conanfile.txt  remove_room.sh  setup_windows.ps1
client/assets/config/: configMouseFormat.json  configSoundFormat.json  configSpriteFormat.json  configTextFormat.json  configVelocityFormat.json  configWindowFormat.json
client/assets/config/background/: Background.json
client/assets/config/button/: ButtonCreateRoom.json  ButtonJoinRoom.json  ButtonListRoom.json  ButtonMenu.json  ButtonMenuQuit.json  ButtonPlay.json  ButtonQuit.json  ButtonRefresh.json  ButtonReturn.json  ButtonSettings.json
client/assets/config/level/: level1.json
client/assets/config/monster/: monster1.json
client/assets/config/music/: Music.json  MusicGame.json
client/assets/config/player/: Player.json
client/assets/config/powerUp/: powerUp.json
client/assets/config/projectiles/: playerShot1.json
client/assets/config/text/: ListRoom.json  ResultEnd.json  Title1.json  Title2.json
client/src/: main.cpp
client/src/game/: MainEnd.cpp  MainGame.cpp  MainLoop.cpp  MainMenu.cpp
client/src/game/include/: MainEnd.hpp  MainGame.hpp  MainLoop.hpp  MainMenu.hpp
client/src/network/include/: FileDownload.hpp  TcpClient.hpp  TcpConnectionClient.hpp  UdpClientNetwork.hpp
client/src/network/src/: TcpClient.cpp  UdpClient.cpp
common/: Base64.hpp  Cuuid.hpp  ISerializable.hpp  JsonUtility.cpp  JsonUtility.hpp  OpenConfigFile.hpp
common/client/: AUser.cpp  AUser.hpp
common/gameSrc/game/background/: Background.hpp
common/gameSrc/game/button/: Button.hpp  ButtonListRoom.hpp
common/gameSrc/game/clock/: ClockGame.hpp
common/gameSrc/game/include/: MainGame.hpp  MainLoop.hpp  MainMenu.hpp
common/gameSrc/game/monster/: Monster.hpp
common/gameSrc/game/music/: Music.hpp
common/gameSrc/game/parallax/: Parallax.hpp
common/gameSrc/game/player/: Player.hpp
common/gameSrc/game/powerUp/: PowerUp.hpp
common/gameSrc/game/projectiles/: Projectiles.hpp
common/gameSrc/game/spawn/: SpawnEnemy.hpp
common/gameSrc/game/text/: CText.hpp
common/gameSrc/gameEngine/: flags.cpp
common/gameSrc/gameEngine/components/: AnimationComponent.hpp  AttackComponent.hpp  ButtonComponent.hpp  ClockComponent.hpp  EnemyTagComponent.hpp  FightComponent.hpp  GravityComponent.hpp  LevelComponent.hpp  LifeComponent.hpp  MusicComponent.hpp  PlayerTagComponent.hpp  PositionComponent.hpp  PowerUpComponent.hpp  PowerUpTagComponent.hpp  ProjectilesTagComponent.hpp  Renderable.hpp  Rigidbody.hpp  RoomComponent.hpp  ScoreComponent.hpp  SpawnComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  Transform.hpp  VelocityComponent.hpp
common/gameSrc/gameEngine/core/: Component.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  Manager.hpp  Systems.hpp  SystemsManager.hpp  Types.cpp  Types.hpp
common/gameSrc/gameEngine/math/: Vector2.hpp
common/gameSrc/gameEngine/sfml/: Clock.hpp  Event.hpp  IClock.hpp  IColor.hpp  IEvent.hpp  IMouse.hpp  ISound.hpp  ISprite.hpp  IText.hpp  IWindow.hpp  Mouse.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Window.hpp
common/gameSrc/gameEngine/systems/: SystemAnimation.hpp  SystemClick.hpp  SystemCollider.hpp  SystemControl.hpp  SystemDestroyObjs.hpp  SystemEnterRoom.hpp  SystemFire.hpp  SystemInteractifBtn.hpp  SystemMovement.hpp  SystemMusic.hpp  SystemRender.hpp  SystemRenderText.hpp  SystemSpawnE.hpp  SystemStopMusic.hpp  SystemTest.hpp  SystemWindow.hpp
common/gameSrc/gameEngine/utils/: Utils.hpp
common/protocol/: AProtocol.cpp  AProtocol.hpp  IProtocol.hpp
files/: server_config.json
monsters/: Imonster.hpp  LoadMonster.hpp
monsters/Leanbeast/: CMakeCache.txt  CMakeLists.txt  Leanbeast.cpp  Leanbeast.hpp  Makefile  cmake_install.cmake  entryPoint.cpp
monsters/PutridLopes/: CMakeCache.txt  CMakeLists.txt  Makefile  PutridLopes.cpp  PutridLopes.hpp  cmake_install.cmake  entryPoint.cpp
server/API/: entryPoint.cpp
server/API/directory/include/: DirectoryLoader.hpp
server/API/directory/src/: DirectoryLoader.cpp
server/clients/include/: ServerClient.hpp  UdpClient.hpp
server/clients/src/: ServerClient.cpp  UdpClient.cpp
server/room/include/: IPCMessage.hpp  Room.hpp  RoomIPC.hpp
server/room/src/: Room.cpp  RoomIPC.cpp
server/room/src/game/: MainGame.cpp
server/room/src/game/include/: MainGameServ.hpp
server/room/src/game/systems/: SystemControlServ.hpp  SystemFireServ.hpp
server/server/include/: IServer.hpp  ITcpSocket.hpp  RoomManager.hpp  Server.hpp  SignalHandler.hpp  TcpConnection.hpp  TcpServer.hpp  UdpServer.hpp
server/server/src/: RoomManager.cpp  Server.cpp  SignalHandler.cpp  TcpConnection.cpp  TcpServer.cpp  UdpServer.cpp
server/src/: main.cpp
